--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-skeletor": "^1.0.6",
+    "vue3-lazyload": "^0.3.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.12",
